    - update debian/firefox.postrm.in
    - update debian/firefox.preinst.in
  * Drop the Ubuntuzilla workarounds now
    - update debian/firefox.postinst.in
  * Add back all the maintainer script magic for removing obsolete conffiles
    when upgrading from 3.6
    - update debian/firefox.postinst.in
    - update debian/firefox.postrm.in
    - update debian/firefox.preinst.in

  [ Micah Gersten <micahg@ubuntu.com> ]
  * Rebase patches for PRBool -> bool transition (bmo: 675553)
    - update debian/patches/allow-lockPref-everywhere.patch
    - update debian/patches/mozilla-kde.patch
  * Drop patch after upstream landing of (bmo: 690432) aka Logging.h passes a
    string directly to printf
    - drop debian/patches/printf-fix.patch
    - update debian/patches/series

 -- Chris Coulson <chris.coulson@canonical.com>  Mon, 10 Oct 2011 00:06:41 +0100

firefox-trunk (9.0~a1~hg20110925r77515-0ubuntu1) oneiric; urgency=low

  * New upstream snapshot v9.0 A1 HG20110925R77515

  * Update globalmenu-extension to 2.0.1
  * Correct the minimum freetype version
    - update debian/rules
    - refresh debian/control
  * Rewrite the apport hook to be more useful
    - update debian/apport/firefox.py.in
  * Ship a file in /etc/apport/native-origins.d to enable bug reporting
    on PPA branches
    - add debian/apport/native-origins.in
    - rename debian/apport/firefox.in => debian/apport/blacklist.in
    - update debian/rules
    - update debian/firefox.install.in
    - update debian/firefox.dirs.in
  * Refresh patches
    - update debian/patches/change-moz-app-name.patch
    - update debian/patches/mozilla-kde.patch
    - update debian/patches/firefox-kde.patch
  * Drop the "branch-specific package relationships" stuff - we don't actually
    need this to be configurable, so just hard-code it all in debian/rules instead
    - remove debian/build/create-branch-substvars
    - update debian/rules
  * Drop the mozilla-devscripts dependency. We were only using this for creating