@@ -2,7 +2,12 @@
 /usr/lib/@MOZ_APP_NAME@-addons/extensions @MOZ_LIBDIR@/extensions
 /usr/lib/@MOZ_APP_NAME@-addons/plugins @MOZ_LIBDIR@/plugins
 /usr/lib/@MOZ_APP_NAME@-addons/searchplugins @MOZ_LIBDIR@/searchplugins
+%%ifdef MOZ_SYMLINKED_DIST
+/usr/lib/@MOZ_APP_NAME@-addons/searchplugins /usr/lib/@MOZ_APP_NAME@-addons/distribution/searchplugins
+/usr/lib/@MOZ_APP_NAME@-addons/distribution @MOZ_LIBDIR@/distribution
+%%else
 /usr/lib/@MOZ_APP_NAME@-addons/searchplugins @MOZ_LIBDIR@/distribution/searchplugins
+%%endif
 @MOZ_SYSTEM_DICTDIR@ @MOZ_LIBDIR@/dictionaries
 /usr/share/hyphen @MOZ_LIBDIR@/hyphenation
 @MOZ_LIBDIR@/firefox.sh /usr/bin/@MOZ_APP_NAME@
