@@ -279,6 +279,9 @@ endif
 ifeq (1,$(shell test "$(DISTRIB_VERSION_MAJOR)$(DISTRIB_VERSION_MINOR)" -ge "1104" && echo "1"))
 	DEB_DEFINES += -DMOZ_NEW_SYSPREF
 endif
+ifeq (1,$(shell test "$(DISTRIB_VERSION_MAJOR)$(DISTRIB_VERSION_MINOR)" -ge "1110" && echo "1"))
+	DEB_DEFINES += -DMOZ_SYMLINKED_DIST
+endif
 
 ifneq (1, $(MOZ_TREE_NSPR))
 	NSPR_DEPENDS = libnspr4-dev
