@@ -53,6 +53,10 @@ firefox-trunk (10.0~a1~hg20111004r78117-0ubuntu1) UNRELEASED; urgency=low
     - update debian/firefox.postinst.in
     - update debian/firefox.postrm.in
     - update debian/firefox.preinst.in
+  * Move the distribution directory to a stable path and symlink it in $appdir
+    - update debian/firefox.install.in
+    - update debian/firefox.links.in
+    - update debian/rules
 
   [ Micah Gersten <micahg@ubuntu.com> ]
   * Rebase patches for PRBool -> bool transition (bmo: 675553)
@@ -63,7 +67,7 @@ firefox-trunk (10.0~a1~hg20111004r78117-0ubuntu1) UNRELEASED; urgency=low
     - drop debian/patches/printf-fix.patch
     - update debian/patches/series
 
- -- Chris Coulson <chris.coulson@canonical.com>  Mon, 10 Oct 2011 00:06:41 +0100
+ -- Chris Coulson <chris.coulson@canonical.com>  Mon, 10 Oct 2011 00:20:49 +0100
 
 firefox-trunk (9.0~a1~hg20110925r77515-0ubuntu1) oneiric; urgency=low
 
